--- a/test.ipynb
+++ b/test.ipynb
@@ -17,6 +17,24 @@
    "source": [
     "print(\"try\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1c4440c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tryagain\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"tryagain\")"
+   ]
   }
  ],
  "metadata": {
